tests/ui/error/builder_does_not_support_unit_structs.rs
#[derive(tidy_builder::Builder)]
struct MyStruct;

fn main() {}
